syntax = "proto3";

package auth;

service AuthService {
  rpc FindOne (HeroById) returns (Hero) {}
  rpc Login (LoginUserDto) returns (LoginStatus) {}
}

message LoginUserDto {
  required string email = 1;
  required string password = 2;
  required string app_id = 3;
}

message LoginStatus {
  required string id = 1;
  required string email = 2;
  required string screen_name = 3;
  required string accessToken = 4;
  required string expiresIn = 5;
}

message HeroById {
  int32 id = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}