syntax = "proto3";
import "google/protobuf/timestamp.proto";

package auth;

service AuthService {  
  rpc FindUserByEmail (UserByEmail) returns (User) {}
  rpc Login (LoginUserDto) returns (LoginStatus) {}
  rpc IsLoggedIn (Token) returns (LoggedIn) {}
  rpc WhoAmI (Token) returns (LoginStatus) {}
}

message LoginUserDto {
  required string email = 1;
  required string password = 2;
  required string app_id = 3;
}

message LoginStatus {
  required string id = 1;
  required string email = 2;
  required string screen_name = 3;
  required string accessToken = 4;
  required string expiresIn = 5;
}

message Token {
  string jwt = 1;
}

message LoggedIn {
  required bool loggedIn = 1;
}

message UserByEmail {
  required string email = 1;
}

message User {
  string id = 1;
  string screen_name = 2;
  string email = 3;
  google.protobuf.Timestamp createdAt = 4;
}